core: Fix excessive ref'ing when registering new keys

When registering new metadata keys, there's no need to take a new
reference to the GParamSpec passed, as the usual construct is to
call g_param_spec_new_... in the call to
grl_registry_register_metadata_key(), leaking the original reference
to the GParamSpec when grilo it de-inited.

https://bugzilla.gnome.org/show_bug.cgi?id=740942